--- a/DnD/inicio.html
+++ b/DnD/inicio.html
@@ -19,12 +19,20 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
-        <h1>Inicio</h1>
-		<p>Hace mucho tiempo, en Estados Unidos, un grupo de amigos estaban cansados de limitarse a leer historias sobre mundo de magia, monstruos y aventura. Querían jugar en esos mundos en vez de solo observarlos. Por ello crearon <b>Dungeons & Dragons</b>, dando el pistoletazo de salida a una revolución en el mundo de los juegos.</p>
-		<p>Para jugar Dungeons & Dragons no necesitas leer todas, la reglas, memorizar cada detalle o dominar el arte de tirar dados de forma extravagante para que salgan mejores números. Solo necesitas tener un grupo de amigos con el que jugar (altualmente gracias a la tecnología a grupos por reddit, discord y otras redes para buscar a gente que quiere si no dispones de un gripo que quiera jugar) y una imaginación poderosa, o el deseo de usar una imaginación poderosa. No necesitas ser un maestro cuentacuentos ni una artista, tan solo debes estar dispuesto a construir algo y compartirlo con los demás.</p>
-		<p>Jugar Dungeons & Dragons es un ejercicio de creación colaborativa donde con tus amigos darás vida a historias épicas, llenas de tensión y momentos memorables. Crearéis bromas referentes a lo ocurrido en partida, los dados pueden ser crueles con vosotros o vuestros mejores amigos y vuestra creatividad colectiva construirá historias que contareis una y otra vez que iran desde lo absurdo (mis favoritas) hasta leyendas contadas por los mejores bardos.</p>
-		<p>Lo más probable sea que los primeros primeros personajes y aventuras sean una amalgama de clichés, pero no tiene por que ser malo, avanza, crea más personajes y aventuras, cuanto más veces practiques más dácil se te hará crear hasta que tengas tu propio mundo de fantasía repleto de lo que tu quieras.</p>
-
+		<div>
+			<div style="float: right; margin-left: 10px; margin-right: 10px;">
+				<p style="text-align: center;"><a href="ImagenesYVideos/dndFoto.jpg"> <img src="ImagenesYVideos/dndFoto.jpg" width="250" height="250" alt="DnD Symbol" class="redondeado"> </a></p>
+			</div>
+			<div>
+				<h1>Inicio</h1>
+				<p>Hace mucho tiempo, en Estados Unidos, un grupo de amigos estaban cansados de limitarse a leer historias sobre mundo de magia, monstruos y aventura. Querían jugar en esos mundos en vez de solo observarlos. Por ello crearon <b>Dungeons & Dragons</b>, dando el pistoletazo de salida a una revolución en el mundo de los juegos.</p>
+				<p>Para jugar Dungeons & Dragons no necesitas leer todas, la reglas, memorizar cada detalle o dominar el arte de tirar dados de forma extravagante para que salgan mejores números. Solo necesitas tener un grupo de amigos con el que jugar (altualmente gracias a la tecnología a grupos por reddit, discord y otras redes para buscar a gente que quiere si no dispones de un gripo que quiera jugar) y una imaginación poderosa, o el deseo de usar una imaginación poderosa. No necesitas ser un maestro cuentacuentos ni una artista, tan solo debes estar dispuesto a construir algo y compartirlo con los demás.</p>
+				<p>Jugar Dungeons & Dragons es un ejercicio de creación colaborativa donde con tus amigos darás vida a historias épicas, llenas de tensión y momentos memorables. Crearéis bromas referentes a lo ocurrido en partida, los dados pueden ser crueles con vosotros o vuestros mejores amigos y vuestra creatividad colectiva construirá historias que contareis una y otra vez que iran desde lo absurdo (mis favoritas) hasta leyendas contadas por los mejores bardos.</p>
+				<p>Lo más probable sea que los primeros primeros personajes y aventuras sean una amalgama de clichés, pero no tiene por que ser malo, avanza, crea más personajes y aventuras, cuanto más veces practiques más dácil se te hará crear hasta que tengas tu propio mundo de fantasía repleto de lo que tu quieras.</p>
+		
+			</div>
+		</div>
+        
 		<hr>
 		
 		<h2>Introducción</h2>
