--- a/DnD/razas.html
+++ b/DnD/razas.html
@@ -22,6 +22,8 @@
 				background-color: #dbc8ba;
 				padding: 1%;
 				vertical-align: top;
+				padding-bottom: 25px;
+				width: 50%;
 			}
 			.redondeado{
 				border-radius: 5%;
@@ -138,51 +140,70 @@
 				<!-- Mediano -->
 				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/hobbit.jpg"> <img src="ImagenesYVideos/hobbit.jpg" width="275" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
 					<h3>Medianos</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
+					<p>Disfrutar de las comodidades del hogar es el objetivo vital de la mayoría de los <b>medianos</b>: un lugar en el que asentarse en paz y tranquilidad, lejos de las depredaciones de los monstruos y los ejercitos; dotado de un fuego calentito y comida abundante, con bebida y conversación de calidad. La mayoría viven en comunidades agrícolas remotas pero una pequeña parte son miembros de bandas nómadas que viajan constantemente. Aman la paz, la comida y el hogar.</p>
+					<p>Pequeños y prácticos, los medianos sobreviven en un mundo poblado de seres más grandes evitando ser detectados. Suelen ser desde morenos hasta pálidos, sus cabellos son ondulados marrones o color arena, sus ojos son color avellana y a los hombres les gusta lucir patillas. Visten ropas sencillas, cómodas y prácticas, en especial de colores vivos.</p>
+					<p>Su espíritu práctico se extiende a las necesidades básicas y placeres sencillos. Hasta el más rico de los medianos guarda sus tesoros en el sótano en lugar de hacer alarde de ellos. Poseen un don para encontrar la solución más directa a los problemas y no soportan la indecisión.</p>
 					<ul>
-						<li>asdasd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
+						<li><b>Mejora de Característica.</b> Su Destreza aumenta en 2.</li>
+						<li><b>Edad.</b> Suelen alcanzar la edad adulta a los veinte años y pueden llegar a vivir hasta 150 años.</li>
+						<li><b>Alineamiento.</b> Lo normal es que sean amables y de buen corazón, odien ver a otros sufrir y no toleren la opresión. Son ordenados y tradicionales, se apoyan en la comunidad y la comodidad de sus costumbres.</li>
+						<li><b>Tamaño.</b> Suelen medir unos 90 centimetros y pesar unos 20 kilos.</li>
+						<li><b>Velocidad.</b> Su velocidad caminando es 25 pies.</li>
+						<li><b>Afortunado.</b> Al sacar un 1 en un dado de tirada de ataque, prueba de característica o tirada de salvación, puedes volver a tirar el dado.</li>
+						<li><b>Valiente.</b> Posees ventaja en tiradas de salvación en contra de ser asustado.</li>
+						<li><b>Agilidad de Mediano.</b> Puedes moverte a través del espacio de una criatura de un tamaño mayor al tuyo.</li>
+						<li><b>Idiomas.</b> Hablas, lees y escribes común y mediano. El idioma mediano no es secreto pero es reciente. Escriben poco, por lo que no tiene producción literaria, aunque su tradición oral es muy rica.</li>
 					</ul>
-					<p>jdfshdjf</p>
+					<p>Los dos tipos de principales de medianos son los piesligeros y los robustos, estrechamente relacionados.</p>
+					<h4>Piesligeros</h4>
+					<p>Los piesligeros se esconde con facilidad de cualquier criatura o persona. Tienen tendencias afables y de llevarse bien con los demás.</p>
+					<ul>
+						<li><b>Mejora de Característica.</b> Tu Carisma aumenta en 1.</li>
+						<li><b>Sigiloso por Naturaleza.</b> Puedes intentar escoderte tras cualquier cosa o criatura que se más grande que tu.</li>
+					</ul>
+					<h4>Fornido</h4>
+					<p>Los fornidos son más resistentes que la mayoría y aguantan bien el veneno (probablemente debido a su dieta). Algunos afirman que los fornidos tienen sangre enana.</p>
+					<ul>
+						<li><b>Mejora de Característica.</b> Tu Constitución aumenta en 1.</li>
+						<li><b>Resistencia de Fornido.</b> Tienes ventaja en tiradas de salvación contra veneno y posees resistencia al daño del veneno.</li>
+					</ul>
 				</td>
 
 				<!-- Humano -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/human.jpg"> <img src="ImagenesYVideos/human.jpg" width="250" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
 					<h3>Humanos</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
+					<p>Los <b>humanos</b> son la más joven de las razas comunes. Han llegado comparativamente tarde al mundo y sus vidas son más cortas que las de enanos, elfos y dragones. Quizá por esa breve existencia los humanos aspiran a conseguir tanto como sean capaces en los pocos años que viven. Según Tolkien los humanos fueron dotados de algo que no tienen las demás razas: libre albedrío.</p>
+					<p>Debido a su tendencia a la emigración y la conquista, los humanos son muy variopintos. El color de piel varia desde el negro al blanco y sus cabellos pueden ser rojos, rubios, negros, marrones, lisos, rizados, ondulados, etc. Los varones pueden tener vello facial. Algunos humanos poseen sangre de otras razas y linajes.</p>
+					<p>Son flexibles y ambiciosos, poseen una amplia variedad de gustos, códigos morales y costumbres. Cuando se asientan lo hacen para quedarse, construyendo grandes ciudades que perviven eras y poseen reinos que duran siglos. El individuo tiene una corta existencia, pero sus naciones y culturas se remontan más allá de la memoria de cualquier humano.</p>
 					<ul>
-						<li>asd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
+						<li><b>Mejora de Característica.</b> Todas tus puntuaciones aumentan en 1.</li>
+						<li><b>Edad.</b> Alcanzan la madurez poco antes de los 20 años y viven entre 80 y 100 años.</li>
+						<li><b>Alineamiento.</b> Los humanos no tienen tendencias, se puede encontrar tanto lo mejor como lo peor.</li>
+						<li><b>Tamaño.</b> La altura varía de 1,5 hasta 1,8 metros, aunque pueden medir en casos contados más de 2 metros. El tamaño es Mediano.</li>
+						<li><b>Velocidad.</b> Su velocidad caminando es de 30 pies.</li>
+						<li><b>Idiomas.</b> Pueden hablar, leer y escribir común y otro idioma de tu elección. Normalmente aprenden los idiomas de aquellos con los que se relacionan.</li>
 					</ul>
-					<p>jdfshdjf</p>
 				</td>
 			</tr>
 
 			<tr> 
 				<!-- Tiefling -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/tiefling.jpg"> <img src="ImagenesYVideos/tiefling.jpg" width="225" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
 					<h3>Tiefling</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
+					<p>Ser recibido con miradas y susurros, ser víctima de la violencia y los insultos por la calle, observar desconfianza y miedo en todo los rostros; todo esto es el destino de los <b>tieflings</b>. Estos seres descienden de los humanos y tienen un aspectos humanesco, sin embargo su legado infernal ha marcado su apariencia. Poseen largos cuernos que adoptan gran variedad de formas. También cuentan con gruesas colas de hasta 1,5 metros de largo. Sus caninos son afilados y sus ojos no tienen pupila, siendo de colores uniformes: negro, rojo, blanco, plata u oro. Su piel puede ser de los colores de los humanos pero tambien de varias tonalidades de rojo e incluso (raramente) de azulaceo. Su cabello nace tras sus cuernos y suele ser oscuro: negro, marrón, rojo, azul o púrpura.</p>
+					<p>Dado que carecen de tierra natal, los tieflings son conscientes que deben forjar su propio camino y saben que deben ser fuertes para sobrevivir. Recelan al principio de quienes dicen ser sus amigos, pero cuando demuestran ser dignos de confianza no dudan en entregarsela. Cuando un tiefling ofrece su lealtad se convierte en un amigo fiel y en un aliado de por vida.</p>
+
 					<ul>
-						<li>asdasd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
+						<li><b>Mejora de Característica.</b> Tu Carisma aumenta en 2 y tu Inteligencia en 1.</li>
+						<li><b>Edad.</b> Los tieflings maduran a la vez que los humanos y viven poco más que estos.</li>
+						<li><b>Alineamiento.</b> No poseen una tendencia innata al mal aunque muchos acaben en este lado. Su naturaleza les hace inclinarse hacia el caos.</li>
+						<li><b>Tamaño.</b> Los tieflings son aproximadamente del tamaño y complexión humana. Son de tamaño Mediano.</li>
+						<li><b>Velocidad.</b> Su velocidad caminando es de 30 pies.</li>
+						<li><b>Visión en la Oscuridad.</b> Debido a tu sangre infernal, puedes ver bien en la oscuridad o con poca luz. Ves hasta 60 pies la luz tenue como luz brillante y en la oscuridad como si hubiera luz tenue. No distingues los colores en la oscuridad.</li>
+						<li><b>Resistencia Infernal.</b> Posees resistencia al daño por fuego.</li>
+						<li><b>Linaje Infernal.</b> Conoces el truco <i>taurmaturgia</i>. Al llegar a nivel 3 puedes lanzar <i>represión infernal</i> como conjuro de nivel 2 y cuando llegas a nivel 5 puedes lanzar el conjuro <i>oscuridad</i>. El Carismo es tu aptitud mágica para lanzar los conjuros.</li>
+						<li><b>Idiomas.</b> Puedes hablar, leer y escribir común e infernal.</li>
 					</ul>
-					<p>jdfshdjf</p>
 				</td>
 			</tr>
 
