--- a/DnD/enemigos.html
+++ b/DnD/enemigos.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8" />
-		<title>Encabezado</title>
+		<title>Enemigos</title>
 		<style>
 			body{
 				background-color: #161616;
