--- a/DnD/frame.html
+++ b/DnD/frame.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
-    <title>Marco</title>
+    <title>DnD</title>
     <style>
         body {
             display: flex;
