--- a/DnD/encabezado.html
+++ b/DnD/encabezado.html
@@ -7,10 +7,14 @@
 			body{
 				background-color: #161616;
 			}
+			img{
+				opacity: 0.75;
+			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
         <img src="ImagenesYVideos/DnD-Symbol.png" alt="DnD" width="143" height="80" style = "margin-left: 75px;"/> 
+		<!-- Solo uso una imagen a modo de logo para la parte de arriba de la pagina -->
 	</body>
 </html>
