--- a/DnD/enemigos.html
+++ b/DnD/enemigos.html
@@ -4,13 +4,87 @@
 		<meta charset="utf-8" />
 		<title>Enemigos</title>
 		<style>
-			body{
-				background-color: #161616;
+            body{
+                background-color: #e6cfbd;
+				margin-left: 25px;
+				margin-bottom: 50px;
+				margin-right: 10px;
+            }
+			.cita{
+				text-align: right;
+				margin-right: 100px;
 			}
+			.t1{
+				margin: 15px;
+				border-spacing: 15px;
+
+			}
+			.tabla{
+				background-color: #dbc8ba;
+				padding: 1%;
+				vertical-align: top;
+				padding-bottom: 25px;
+				width: 50%;
+			}
+			.redondeado{
+				border-radius: 5%;
+			}
+			
 		</style>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
-        <img src="ImagenesYVideos/DnD-Symbol.png" alt="DnD" width="143" height="80" style = "margin-left: 75px;"/> 
+        <h1>Enemigos</h1>
+		<p>Los enemigos pueden ser la base de tu aventura en Dungeons & Dragons. Normalmente suele haber un combate o dos por sesión y las campañas suelen terminar con feroces combates contra criaturas del más a allá o magos que quieren someter el multiverso.</p>
+		<p>Pero no todos deben ser temibles jefes finales, también un combate sirve para llegar al climax de una sesión, para que los personajes suban experiencia o (para que engañarnos) para rellenar tiempo si el DM no ha podido completar la sesión.</p>
+		<p>En cualquier caso, es igual de importante un combate contra unos lobos que amenzan una granja como el del temible dragón que ataca la ciudad, por que ambos tienen algo en común: estan hechos a medida para un desafio acorde con el nivel de los jugadores. Ningún jugador de nivel 1 podrá enfrentarse a una criatura marina controlamentes y ningún jugador de nivel 20 estará dispuesto a gastar su tiempo en los pateticos goblins que atacan el puesto de la señora Martins.</p>
+		<p>A continuación te mostraré algún que otro enemigo que te podrás encontrar en tu aventura sin ningún orden en especial:</p>
+
+		<table class = "t1" align = "center">
+			<tr> 
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/goblins.jpg"> <img src="ImagenesYVideos/goblins.jpg" width="200" height="300" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Goblins</h3>
+					<p>Hay multitud de tipos de goblins, es una raza entera. Los goblins son pequeños, verdes, tienen las orejas y dientes puntiagudos y están completamente locos. Viven en aldeas hechas con maderas y muy toscas. Son gobernados por un jefe goblin que actua como si el jefe de una tribu se tratara, pero a efectos prácticos viven en una anarquía en la que sobrevive el más fuerte... o el más loco.</p>
+					<p>Son un desafío aceptable para jugadores de bajo nivel, atacan pueblos e invaden zonas del bosque corrompiendo su alrededor por lo que ahí puede ser la excusa en la que los personajes entren en juego.</p>
+				</td>
+
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/bandit.jpg"> <img src="ImagenesYVideos/bandit.jpg" width="225" height="300" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Bandidos</h3>
+					<p>Los bandidos emboscan carruajes en los caminos, atacan aldeas pequeñas y roban a ancianitas por una única razón: el dinero. No son más que humanos (o razas comunes) que han decidido ganarse la vida de una manera un tanto al margen de la ley, pero pueden llegar a ser incluso razonables. Suelen ir en grupos de entre 2 y 10 personas y no se mantienen demasiado en un mismo lugar o los podrían emboscar a ellos.</p>
+					<p>Un grupo de bandidos puede ser un desafio adecuado para personajes que ya han alcanzado el nivel 3, y puede ser divertido persuadirlos de que te roben o incluso convencerlos para unirse a ellos en sus fechorías.</p>
+				</td>
+			</tr>
+
+			<tr> 
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/dragon.jpg"> <img src="ImagenesYVideos/dragon.jpg" width="200" height="300" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Dragones</h3>
+					<p>No hay solo un tipo de dragon, dependiendo de donde estes y de la edad de este dragón puede ser desde un desafio dificil a uno imposible. Existen los dragones rojos, verdes, azules, de bronce, de plata y de oro entre otros y pueden ser jovenes, adultos y ancianos. Son criaturas mágicas que suelen vivir apartadas de la sociedad, custodiando tesoros, protegiendo castillos con princesas o cazando por las montañas a aventureros incautos.</p>
+					<p>Ya hablamos de un desafio para aventureros bien entrados en nivel o que cuenten con un grupo numeroso. Según la edad y el tipo de dragón puede ser un desafio desde nivel 12 hasta de nivel 20, por lo que ten cuidado si te encuentras con uno a bajo nivel.</p>
+					<p>No debemos olvidar la importancia de este enemigo ya que, por si no os habeis dado cuenta, forma parte del nombre del juego.</p>
+				</td>
+
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/troll.jpg"> <img src="ImagenesYVideos/troll.jpg" width="300" height="300" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Troll</h3>
+					<p>Los trolls suelen ser cortos de mente, si no estan bajo ningún control suelen atacar sin preguntar, es una cosa que va escrita en su adn. Sin embargo lo interesante viene cuando una mente superior lo ha controlado. Un troll puede custodiar cualquier cosa y hacer de barrera para los jugadores, que podrían superar un puzzle suyo en vez de atacarle sin más.</p>
+					<p>Un troll es interesante ya que se puede usar a nivel bajo para bloquear zonas y meter puzzles, a nivel medio como enemigo desafiante y a nivel alto cómo un enemigo de apoyo.</p>
+				</td>
+			</tr>
+
+			<tr> 
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/beholder.jpg"> <img src="ImagenesYVideos/beholder.jpg" width="300" height="300" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Beholder</h3>
+					<p>Un clásico de DnD, se trata de una bola de carne flotante con una boca grande, un solo ojo central y varios tentáculos con ojos en la parte superior con poderes mágicos mortales. Es original de este juego y se basa en atacarte con ataques psiquicos para después devorarte.</p>
+					<p>A los jugadores senior de este juego les gustará que en tu partida haya un beholder. Eso si, recomendaría que se esperaran mínimo hasta nivel 9 para su encuentro ya que antes podría ser mortal.</p>
+				</td>
+
+				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/mimic.jpg"> <img src="ImagenesYVideos/mimic.jpg" width="225" height="300" alt="DnD Symbol" class="redondeado"> </a></p>
+					<h3>Mímico</h3>
+					<p>Si antes hablabamos de un clásico aquí no se queda nada corto. El aventurero va a recoger los preciados tesoros de dentro del cofre pero, oh sorpresa, el cofre le responde intentando morderle. Un mímico es una criatura que se tansforma en objetos para pasar inadvertido y sorprender a sus presas, aunque por azares del destino casi siempre acaba convirtiendose en el tesoro que los aventureros buscan desde el principio de la campaña. También tengo que añadir que el mímico no tiene por que ser necesariamente hostil, en una de mis partidas un mímico se transformo en una sarten y acabo siendo la mascota de un compañero cocinero.</p>
+					<p>No es altamente desafiante, incluso a jugadores de nivel bajo podría resultarle sencillo vencerlo, pero casi siempre se llevan un susto inicial al ver que su botin se mueve y les ataca, tanto jugadores nuevos como antiguos pueden disfrutar de un mímico bien instroducido.</p>
+					
+				</td>
+			</tr>
+
+		</table>
 	</body>
 </html>
