--- a/DnD/indice.html
+++ b/DnD/indice.html
@@ -44,9 +44,11 @@
             <li class = "lis"><a href = "equipamiento.html" target = "cuerpo">Equipamiento</a></li>
             <li class = "lis"><a href = "npc.html" target = "cuerpo">NPC</a></li>
             <li class = "lis"><a href = "enemigos.html" target = "cuerpo">Enemigos</a></li>
-			<li class = "lis"><a href = "enemigos.html" target = "cuerpo">Crea tu Personaje</a></li>
+			<li class = "lis"><a href = "formularios.html" target = "cuerpo">Crea tu Personaje</a></li>
             <li class = "lis"><a href = "enlaces.html" target = "cuerpo">Enlaces y Videos</a></li>
+			<li class = "lis"><a href = "mapaweb.html" target = "cuerpo">Mapa Web</a></li>
 
         </ul>
+		<!-- Uso la etiqueta target para que cambie el enlace de la pestaña cuerpo en vez de esta pestaña y asi dejar esto solo como indice -->
 	</body>
 </html>
