--- a/DnD/inicio.html
+++ b/DnD/inicio.html
@@ -21,7 +21,7 @@
 	<body>
 		<div>
 			<div style="float: right; margin-left: 10px; margin-right: 10px;">
-				<p style="text-align: center;"><a href="ImagenesYVideos/dndFoto.jpg"> <img src="ImagenesYVideos/dndFoto.jpg" width="250" height="250" alt="DnD Symbol" class="redondeado"> </a></p>
+				<p style="text-align: center;"><a href="ImagenesYVideos/dndFoto.jpg"> <img src="ImagenesYVideos/dndFoto.jpg" width="250" height="250" alt="DnD Symbol" class="redondeado" style="filter: saturate(50%);"> </a></p>
 			</div>
 			<div>
 				<h1>Inicio</h1>
@@ -32,7 +32,8 @@
 		
 			</div>
 		</div>
-        
+        <!-- Aqui uso el float con el div para añadir imagenes tanto a derecha como a izquierda sin perder el encuadre -->
+
 		<hr>
 		
 		<h2>Introducción</h2>
