--- a/DnD/razas.html
+++ b/DnD/razas.html
@@ -38,6 +38,7 @@
 		<p><i>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana." </i></p>
 		<p>La raza de tu personaje no solo afecta a sus puntuaciones de característica y sus atributos, sino que también te dará pistas para construir su historia. En esta página verás una descripción de algunas razas, con información que te ayudará a interpretar a un aventurero que pertenezca a ella, como puede ser su personalidad, apariencia física, peculiaridades de su sociedad y alineamientos típicos de la raza. Estos detalles son sugerencias que te serán de utilidad al pensar en tu personaje, pero los aventureros pueden desviarse considerablemente de la norma. Merece la pena meditar por qué tu personaje es diferente a otros, pues te ayudará a pensar en su trasfondo y su personalidad.</p>
 		<p class = "cita"><b>- Manual del Jugador. Dungeons & Dragons. </b></p>
+		<!-- Hago uso de la clase cita para poner el texto a la derecha sin que se descuadre si la página es más pequeña o más grande -->
 
 		<hr></hr>
 
@@ -56,6 +57,7 @@
 		<hr>
 
 		<table class = "t1" align = "center">
+			<!-- Las tablas las uso de manera similar en todas las páginas. Me sirven para maquetar y hacer que se vea bien toda la pagina, usandolas sin bordes y con colores un poco más oscuros que los del fondo -->
 			<tr> 
 				<!-- Enano -->
 				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/enano2.jpg"> <img src="ImagenesYVideos/enano2.jpg" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
